--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,8 @@ AllCops:
     - 'spec/**/*'
   Exclude:
     - 'app/views/**/*'
+    - 'app/assets/**/*'
+    - 'app/javascript/**/*'
     - 'bin/*'
     - 'db/schema.rb'
     - 'db/migrate/*'
